test/expected/declare_pk.out
declare p as pointer to S
                        ^
25: error: "S": unknown name
